Fixed OutOfPermGen memory error that occurs when building the webstart Maven build